Style fixes for form placeholder colors and form spacing between label. Better alignment for checkbox label. CreateAppFrom styles fixes.

--- a/frontend/src/core/components/CreateForm/CreateForm.scss
+++ b/frontend/src/core/components/CreateForm/CreateForm.scss
@@ -1,38 +1,33 @@
 @import "../../../scss/Variables/Fonts";
 
 .create-form {
+  .page-title {
+    .info {
+      line-height: 1.5;
+      letter-spacing: normal;
+      margin-bottom: 2.5rem;
+    }
+  }
 
   .create-form-left-side {
-    padding-left: 0;
-
-    .form-group {
-      * {
-        margin-bottom: -5px;
-      }
-    }
+    padding: 0;
 
     button {
       margin-top: 35px;
-
-      span {
-        left: -22px;
-      }
     }
   }
 
   .create-form-right-side {
-    margin-top: 5px;
-    padding-left: 60px;
-    padding-right: 150px;
-  }
+    padding: 35px 150px 0 72px;
 
-  .dropzone {
-    margin-left: 17px;
+    .container {
+      padding: 0;
+    }
   }
-
 
   .legal-info {
-    margin-top: 35px;
+    margin-top: 50px;
+    max-width: 410px;
     font-family: $primary-font-family;
     font-size: 12px;
     font-weight: 300;
@@ -42,9 +37,14 @@
       font-weight: bold;
     }
 
+    ul {
+      padding-inline-start: 15px;
+      margin-bottom: 0;
+    }
+
     ul > li {
-      margin-bottom: 8px;
       font-weight: 300;
+      margin-bottom: 14px;
     }
 
     .legal-info-check {
@@ -55,7 +55,8 @@
         height: 18px;
       }
 
-      p, a {
+      span,
+      a {
         font-family: $primary-font-family;
         color: $secondary-color;
         font-size: 14px;
@@ -71,9 +72,8 @@
       }
 
       .form-check {
-        padding-left: 45px;
+        padding-left: 15px;
       }
     }
   }
-
 }
